fix: :lipstick: Remove navigation arrow, which didn't look good on mobile.

--- a/components/Main/Main.module.css
+++ b/components/Main/Main.module.css
@@ -1,78 +1,61 @@
 .main {
-    /* 11em is the header's height and this element's padding */
-    margin-top: 11em;
-    padding: 0 3em;
-    /* 12 rem is the header's height */
-    min-height: calc(100vh - 12rem);
+	/* 11em is the header's height and this element's padding */
+	margin-top: 11em;
+	padding: 0 3em;
+	/* 12 rem is the header's height */
+	min-height: calc(100vh - 12rem);
 
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-template-rows: 85% 15%;
-    align-items: center;
-    justify-items: center;
-    color: var(--text-primary);
+	display: grid;
+	grid-template-columns: repeat(2, auto);
+	grid-template-rows: 85% 15%;
+	align-items: center;
+	justify-items: center;
+	color: var(--text-primary);
 }
 
-.main p, .typewriter {
-    font-family: var(--font-primary);
-    line-height: 1.5;
+.main p,
+.typewriter {
+	font-family: var(--font-primary);
+	line-height: 1.5;
 }
 
-.normalText, .typewriter {
-    font-size: clamp(1.25rem, 1.5vw, 3rem);
+.normalText,
+.typewriter {
+	font-size: clamp(1.25rem, 1.5vw, 3rem);
 }
 
 .normalText[id] {
-    display: inline;
+	display: inline;
 }
 
 .main > section > div {
-    width: fit-content;
+	width: fit-content;
 }
 
 .bigText {
-    font-size: clamp(1.75rem, 2.5vw, 4rem);
+	font-size: clamp(1.75rem, 2.5vw, 4rem);
 }
 
 .main img {
-    max-width: clamp(20rem, 35vw, 45vw);
-}
-
-.main a {
-    grid-column: 1/3;
-    width: 3%;
-
-    font-family: var(--font-accent);
-    font-size: clamp(2rem, 2.5vw, 5rem);
-    text-align: center;
-    align-self: flex-end;
-
-    transform: rotateZ(-270deg);
-    cursor: pointer;
-
-    border: none;
+	max-width: clamp(20rem, 35vw, 45vw);
 }
 
 @media only screen and (max-width: 768px) {
-    .main {
-        padding: 0 1em;
-        margin: 0;
-        min-height: calc(100vh - 11rem);
+	.main {
+		padding: 0 1em;
+		margin: 0;
+		min-height: calc(100vh - 11rem);
 
-        grid-template-columns: 100% 0;
-        grid-template-rows: repeat(2, auto) auto;
-    }
+		grid-template-columns: 100% 0;
+		grid-template-rows: repeat(2, auto) auto;
+	}
 
-    .main section {
-        align-self: flex-end;
-        margin-bottom: 1em;
-    }
+	.main section {
+		align-self: flex-end;
+		margin-bottom: 1em;
+	}
 
-    .main img {
-        grid-row: 2/3;
-    }
-
-    .main a {
-        grid-row: 3/4;
-    }
+	.main img {
+		grid-row: 2/3;
+	}
 }
